@@ -1,3 +1,4 @@
+* Add statistics to Cache
 * Add support for avatars
 * Add status command
 * Add document widget on form view
